--- a/index.html
+++ b/index.html
@@ -272,6 +272,6 @@
       </section>
     </main>
 
-    <footer>Shared under a Creative Commons Attribution–NonCommercial license.</footer>
+    <footer>Shared under a MIT License.</footer>
   </body>
 </html>
